<resources>
    <string name="app_name">GuideMi</string>
    <string name="duomo_name">Duomo di Milano</string>
    <string name="duomo_address">Piazza del Duomo, Milano</string>
    <string name="duomo_desc">The Duomo, besides being an artistic monument, is a privileged place of prayer. The Cathedral is strongly linked to memory and to the Magisterium of the Bishops who have succeeded to the Throne of St. Ambrose and to the history of the millions of faithful who collect their thoughts there each year to celebrate the Sacred Mysteries.\n\nThe Cathedral is the Mother Church of the Diocese, which has a symbolic exemplary function both with regard to the life of religion in the city, and with regard to diocesan activity.  Liturgical activity is the true essence of the Cathedral: the Duomo is the heart of liturgical tradition which, referring to the figure of St. Ambrose, is an expression of the tangible form with which the apostolic tradition is deeply rooted and has developed over the centuries in the Church of Milan.  In the Duomo, daily liturgical worship is practiced in many different forms: not only celebrations of the Eucharist, but also, because of the constant presence of the Metropolitan Chapter, the Liturgy of the Hours, as preparation for and prolongation of the Eucharist.\n\nParticular attention is paid to Eucharistic Adoration, the Liturgy of the Word, celebration of the Sacrament of Reconciliation and to the most genuine and sincere forms of “popular piety”, such as reciting of the Rosary and, during Lent, the practice of the Stations of the Cross. Liturgical worship by the faithful is the essence of the Cathedral which, in all of its expressions, above all through the countless works of art that it has preserved for centuries, is required to live and give testimony in the very heart of the city to faithfulness to Christ\'s Gospel. </string>
    <string name="sforza_name">Castle Sforzesco</string>
    <string name="sforza_address">Piazza Castello, Milano</string>
    <string name="sforza_desc">The Castle, one of the most representative and popular monuments in Milan, has undergone over the centuries various and complex transformations; it has been defence fortress, military barracks, private residence and centre of cultural institutions and museums.\n\nBecause of its evident defensive structure, it underwent sieges, demolitions and reconstructions of some parts of it during French, Spanish and Austrian domination.\n\nThe events of the Castle unfold in the city’s wide window of history, beginning with the original nucleus of the castle, named Porta Giovia, dating back to 1358-1368  during Galeazzo II Visconti’s period who used the Castle as his residence while he stayed in Milan, but mostly used it as a military base.
The Castle became Filippo Maria Visconti’s permanent residence, continuing with the consolidation and construction of a real fortress. Later, it was mainly Francesco Sforza who, as  ruler of Milan in 1450, gave particular impetus to the reconstruction of the building  which had been seriously damaged between 1447 and 1450.\n\nToday the Castle hosts many Civic Museums; in fact, since 1896 it has hosted one of the vastest artistic collections in the city, mainly in the Museo d’Arte Antica (Museum of Ancient Art).\n\n 
There is also the Pinacoteca (Picture Gallery), Raccolta di Mobili (Furniture Collection), with pieces from the 15th to the 19th century; the Rocchetta, where one can admire the Museo delle Arti Decorative ((Museum of Decorative Arts), with its extremely vast collection of ceramics; the Oreficerie (Goldsmiths); one of the largest collection of musical instruments in Europe; the Arazzi Trivulzio (Trivulzio Tapestries); the Armeria (Armoury); the Museo della Preistoria e Protostoria (the Museum of Prehistory and Protohistory); the Museo Egizio (Egyptian Museum) and the Sale Viscontee,  rooms for temporary exhibitions. Finally, many important archives and libraries are located in the Castle: Biblioteca d’Arte (Library of Art), the Archivio Storico (Historic Archive), the Biblioteca Trivulziana (Trivulziana Library), the Biblioteca Archeologica e Numismatica (Archaeological and Numismatics Library), C.A.S.V.A. (Centre for Advanced Study in Visual Arts), Raccolta delle Stampe “Achille Bertarelli” (“Achille Bertarelli” Print Collection), Archivio Fotografico (Photographic Archive) and the Raccolta Vinciana (Vinciana Collection).\n\n
The last masterpiece of Michelangelo, the Pietà Rondanini, can be found in the Museo della Pietà Rondanini, opened in 2015 in the Spanish hospital inside the Castle and dedicated exclusively to the sculpture.</string>
    <string name="galleria_name">Galleria Vittorio Emanuele II</string>
    <string name="galleria_address">Piazza del Duomo, Milano</string>
    <string name="galleria_desc">The Galleria, a place of transit for busy managers or a stop for enchanted and curious tourists, expresses the various faces of the city through its many facets.\n\nAs soon as it was finished, the Galleria became immediately famous for its large size, extraordinary for the time and sign of a new era.\n\nThe 20th century is synonymous with modernity and progress. It’s an intricate and complex historical period that saw technical accelerations, engineering-industrial products, and, in general, the rise of the work of the human genius.\n\nThe great spaces of the Galleria foresaw a reality that has its distinguishing mark in the sense of movement. We can’t forget here, in the artistic field, a masterpiece such as “Riot in the Gallery” (Rissa in Galleria) by Boccioni, that represents reality in an innovative way, projected into a dynamic future. Cars, trams, work in factories: everything was changing the rhythm of the city and the people’s idea on everyday life.\n\n
Considered one of the sites of Milanese luxury shopping, along with Via Montenapoleone and Via della Spiga, it hosts many prestigious labels and brand shops, famous cafés and restaurants, as well as Feltrinelli Records, one of the largest megastores in Italy.\n\nTaking that classic wander through the Galleria, the very heart of the city, as visitors have done for many years, still creates that wonderful sensation. Entering the Galleria, the corridor between Duomo and La Scala Theatre, its magnificent arch welcomes you and hints at the Milanese spectacle that lies within. The original idea of the designers was to create a porticoed street that would function as a showcase and offer somewhere to take a pleasant stroll, enjoy an aperitif or have dinner after the opera.\n\nToday it can still be considered the “parlour” of the city, a place where you relax and enjoy a coffee at the bar Camparino, let yourself be enchanted by the cute hats of Borsalino and the collections of Prada and Louis Vuitton, or stop for an aperitif at Savini.\n\n
If you wish to return to Milan, the tradition suggests that you have a spin with your heel on the mosaic bulls “attributes” that make up the pavement of the Galleria’s splendid central octagon. Once a gesture to ward off evil, it has become part of the Milanese tradition and has such a following that a deep hole has formed in the pavement.\n\nYou will surely enjoy visiting the Galleria, it will also feel like turning the clock back in time: for the construction, which started in 1865 (by Giuseppe Mengoni) were used mainly iron and glass as for the Parisian train stations, a well-advanced technique in those days.\n\nOn occasion, the Galleria also offers shelter to its guests from sudden rain or from the hot sun, welcoming them in its extraordinary and elegant atmosphere.</string>
    <string name="scala_name">Teatro alla Scala</string>
    <string name="scala_address">Via Filodrammatici, 2, Milano</string>
    <string name="scala_desc">The Teatro alla Scala was built as a replacement of the old Teatro Ducale in 1776 by order of the empress Maria Theresa of Austria, and was inaugurated in 1778 with Antonio Salieri’s Europa riconosciuta. It owes its name to the place where it was built by the neoclassical architect Giuseppe Piermarini: the church of Santa Maria alla Scala.\n\nAssigned place to melodrama, world famous artists performed at the Scala such as Rossini, Donizetti, Bellini and Verdi.\n\nThe theatre was rebuilt after the bombing in 1943 and inaugurated a second time in 1946 with a concert conducted by artist director Arturo Toscanini.\n\nSince 1951, as for artistic director Victor De Sabata’s wish, the opening night takes place on the 7th of December,  the feast of St Ambrose, patron saint of Milan. This helps to give extra symbolic meaning to the première.\n\n
Famous opera singers such as Maria Callas, Renata Tebaldi, Giulietta Simionato, Mirella Freni, Mario Del Monaco, Giuseppe Di Stefano, Luciano Pavarotti, Placido Domingo; film directors Luchino Visconti, Franco Zeffirelli, Luca Ronconi; well-known choreographers and dancers Leonide Massine, George Balanchine, Rudolf Nureyev, Carla Fracci, Luciana Savignano among others performed at the Scala.\n\nWith this musical offering and thanks to the rebuilding and modernisation of the scenic machinery undertaken between 2002 and 2004, La Scala is on a level with the greatest theatres of Europe and the world since the end of WWII.\n\nOn the 7th of December 2004 Riccardo Muti inaugurated the restored theatre playing Europa Riconosciuta by Salieri, as for the very first premiere in 1778.</string>
    <string name="arco_name">Arco della Pace</string>
    <string name="arco_address">Piazza Sempione, Milano</string>
    <string name="arco_desc">The Arco della Pace (Arch of Peace), one of the most interesting example of neoclassical architecture, characterizes the surrounding area.\n\nLuigi Cagnola began its construction in 1807 when the city was under Napoleonic rule. It is located at the centre of the large square, Piazza Sempione. It was interrupted after Napoleon’s defeat at Waterloo, and then completed by Francis I of Austria who dedicated it to Peace.\n\nOn the face of the monument, there are embodiments of the rivers of Lombardy and Veneto: the rivers Po, Ticino, Adda and Tagliamento.\n\nThe monument is built from Baveno granite, clad in marble from Creola d’Òssola. At the top there is a superb statuary group in bronze, the “Chariot of Peace” drawn by six horses, and four “Victorias on horseback”.\n\n
    In his book “A Moveable Feast”, Ernest Hemingway reports the erroneous conviction that the Arco della Pace is aligned with the Arc de Triomphe at the Carousel and the Arc du Triomphe at the Étoile, both in Paris.\n\nOriginally the enormous group consisting of the chariot and six horses faced France, but after the fall of Napoleon and the advent of the Austrian domination in Milan, the chariot was turned around to face the city centre.</string>
    <string name="aulenti_name">Piazza Gae Aulenti</string>
    <string name="aulenti_address">Piazza Gae Aulenti, Milano</string>
    <string name="history">History</string>
    <string name="more">More info</string>
    <string name="webpage">Webpage</string>
    <string name="audio">Audio Guide</string>
    <string name="map">Map</string>
</resources>